jinput dependency fix attmp 5